--- a/catalog.html
+++ b/catalog.html
@@ -42,12 +42,12 @@
         <nav class="inner-navigation">
           <ul class="site-navigation">
             <li class="site-navigation-item"><a href="index.html">Главная</a></li>
-            <li class="site-navigation-item"><a href="About.html">Компания</a></li>
+            <li class="site-navigation-item"><a href="about.html">Компания</a></li>
             <li class="site-navigation-current site-navigation-item"><a>Каталог</a></li>
-            <li class="site-navigation-item"><a href="News.html">Новости</a></li>
-            <li class="site-navigation-item"><a href="Special.html">Спецпредложения</a></li>
-            <li class="site-navigation-item"><a href="Dilivery.html">Доставка</a></li>
-            <li class="site-navigation-item"><a href="Contacts.html">Контакты</a></li>
+            <li class="site-navigation-item"><a href="news.html">Новости</a></li>
+            <li class="site-navigation-item"><a href="special.html">Спецпредложения</a></li>
+            <li class="site-navigation-item"><a href="dilivery.html">Доставка</a></li>
+            <li class="site-navigation-item"><a href="contacts.html">Контакты</a></li>
           </ul>
         </nav>
       </div> 
@@ -284,11 +284,11 @@
           <img src="img/logo.svg" width="136" height="22" alt="Логотип интернет-магазина «Техномарт»">
         </a>
         <ul class="footer-top-nav">
-          <li><a href="About.html">Компания</a></li>
-          <li><a href="News.html">Новости</a></li>
-          <li><a href="Catalog.html">Каталог</a></li>
-          <li><a href="Dilivery.html">Доставка</a></li>
-          <li><a href="Contacts.html">Контакты</a></li>
+          <li><a href="about.html">Компания</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="dilivery.html">Доставка</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <p class="footer-contacts">г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
         +7(812)555-05-55
@@ -297,7 +297,7 @@
           <li><a href="#">Материалы</a></li>
           <li><a href="#">Техника</a></li>
           <li><a href="#">Инструмент</a></li>
-          <li><a href="Special.html">Спецпредложения</a></li>
+          <li><a href="special.html">Спецпредложения</a></li>
         </ul>
       </section>
       <div class="footer-wrapper">
