--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <nav class="main-navigation">
           <ul class="site-navigation">
             <li class="site-navigation-item current-item"><a>Главная</a></li>
-            <li class="site-navigation-item"><a href="About.html">Компания</a></li>
-            <li class="site-navigation-item"><a href="Catalog.html">Каталог</a></li>
-            <li class="site-navigation-item"><a href="News.html">Новости</a></li>
-            <li class="site-navigation-item"><a href="Special.html">Спецпредложения</a></li>
-            <li class="site-navigation-item"><a href="Dilivery.html">Доставка</a></li>
-            <li class="site-navigation-item"><a href="Contacts.html">Контакты</a></li>
+            <li class="site-navigation-item"><a href="about.html">Компания</a></li>
+            <li class="site-navigation-item"><a href="catalog.html">Каталог</a></li>
+            <li class="site-navigation-item"><a href="news.html">Новости</a></li>
+            <li class="site-navigation-item"><a href="special.html">Спецпредложения</a></li>
+            <li class="site-navigation-item"><a href="dilivery.html">Доставка</a></li>
+            <li class="site-navigation-item"><a href="contacts.html">Контакты</a></li>
           </ul>
         </nav>
       </div>
@@ -166,7 +166,7 @@
         </ul>
       </section>
       <section class="popular-maker container">
-        <div class="popular-maker-tittle">
+        <div class="popular-maker-title">
           <h2>Популярные производители:</h2>
           <a href="#" class="all-popular-maker">Все производители</a>
         </div>
@@ -178,7 +178,7 @@
             <a href="#"><img src="img/makita-logo.png" width="123" height="40" alt="Инструмент производства Makita"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/DeWalt-logo.png" width="146" height="44" alt="Инструмент производства DeWalt"></a>
+            <a href="#"><img src="img/dewalt-logo.png" width="146" height="44" alt="Инструмент производства DeWalt"></a>
           </li>
           <li class="popular-maker-item">
             <a href="#"><img src="img/interskol-logo.png" width="200" height="88" alt="Инструмент производства Интерскол"></a>
@@ -187,13 +187,13 @@
             <a href="#"><img src="img/hitachi-logo.png" width="169" height="31" alt="Инструмент производства Hitachi"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/LG-logo.png" width="121" height="73" alt="Инструмент производства LG"></a>
+            <a href="#"><img src="img/lg-logo.png" width="121" height="73" alt="Инструмент производства LG"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/AEG-logo.png" width="151" height="96" alt="Инструмент производства AEG"></a>
+            <a href="#"><img src="img/aeg-logo.png" width="151" height="96" alt="Инструмент производства AEG"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/Metabo-logo.png" width="204" height="69" alt="Инструмент производства Metabo"></a>
+            <a href="#"><img src="img/metabo-logo.png" width="204" height="69" alt="Инструмент производства Metabo"></a>
           </li>
         </ul>
       </section>
@@ -201,7 +201,7 @@
       <!--Сервисы ТЕхномарта: доставка, гарантия, кредит-->
       <div class="service-wrapper">
         <section class="service container">
-          <div class="service-tittle">
+          <div class="service-title">
             <h2>Сервисы</h2>
             <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
@@ -239,7 +239,7 @@
               <li>Автотрейдинг</li>
               <li>ЖелДорЭкспедиция</li>
             </ul>
-            <a class="botton" href="About.html">Подробнее о компании</a>
+            <a class="botton" href="about.html">Подробнее о компании</a>
           </div>
         </section>
         <section class="contacts">
@@ -256,11 +256,11 @@
           <img src="img/logo.svg" width="136" height="22" alt="Логотип интернет-магазина «Техномарт»">
         </a>
         <ul class="footer-top-nav">
-          <li><a href="About.html">Компания</a></li>
-          <li><a href="News.html">Новости</a></li>
-          <li><a href="Catalog.html">Каталог</a></li>
-          <li><a href="Dilivery.html">Доставка</a></li>
-          <li><a href="Contacts.html">Контакты</a></li>
+          <li><a href="about.html">Компания</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="dilivery.html">Доставка</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <p class="footer-contacts">г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
         +7 (812)555-05-55
@@ -269,7 +269,7 @@
           <li><a href="#">Материалы</a></li>
           <li><a href="#">Техника</a></li>
           <li><a href="#">Инструмент</a></li>
-          <li><a href="Special.html">Спецпредложения</a></li>
+          <li><a href="special.html">Спецпредложения</a></li>
         </ul>
       </section>
       <div class="footer-wrapper">
