--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
           Все права защищены
           </p>
           <ul class="social">
-            <li><a class="social-item" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Вконтакте"></a></li>
-            <li><a class="social-item" href="#"><img src="img/facebook-icon.svg" width="12" height="22" alt="Фэйсбук"></a></li>
-            <li><a class="social-item" href="#"><img src="img/instagram-icon.svg" width="21" height="21" alt="Инстаграм"></a></li>
+            <li><a class="social-item" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Страница Техномарт Вконтакте"></a></li>
+            <li><a class="social-item" href="#"><img src="img/facebook-icon.svg" width="12" height="22" alt="Страница Техномарт в Фэйсбук"></a></li>
+            <li><a class="social-item" href="#"><img src="img/instagram-icon.svg" width="21" height="21" alt="Техномарт в Инстаграм"></a></li>
           </ul>
           <p class="footer-feedback">
           Обратная связь:<br>
