--- a/catalog.html
+++ b/catalog.html
@@ -114,7 +114,7 @@
                   </li>
                 </ul>
               </fieldset>
-              <button class="button button-submit-filters">Показать</button>
+              <button class="button-submit-filters">Показать</button>
             </form>
           </section>
           <div class="catalog-right-column"> 
@@ -327,11 +327,11 @@
       <div class="modal-order-nav"> 
         <form class="order-now" action="https://echo.htmlacademy.ru" method="post">
           <fieldset>
-            <button class="button button-continue" type="button">Продолжить покупки</button>
-            <button class="button button-close" type="button" aria-label="Закрыть окно"></button>
+            <button class="button-continue" type="button">Продолжить покупки</button>
+            <button class="button-close" type="button" aria-label="Закрыть окно"></button>
           </fieldset>
         </form>
-        <a href="order.html" class="button order-page">Оформить заказ</a>
+        <a href="order.html" class="order-page">Оформить заказ</a>
       </div>
     </section>
     <script>
