--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <strong>Перфораторы</strong>
                 <span>Настоящие мужские игрушки</span>
                 <a href="#" class="perforator-tools">Открыть каталог</a>
-                <button class="button gallery-button gallery-button-back" type="button"><img src="img/icon-left.svg" width="22" height="40" alt="Предыдущая категория"></button>
-                <button class="button gallery-button gallery-button-next" type="button"><img src="img/icon-right.svg" width="22" height="40" alt="Следующая категория"></button>
+                <button class="gallery-button gallery-button-back" type="button"><img src="img/icon-left.svg" width="22" height="40" alt="Предыдущая категория"></button>
+                <button class="gallery-button gallery-button-next" type="button"><img src="img/icon-right.svg" width="22" height="40" alt="Следующая категория"></button>
               </li>
             </ul>
           </li>
@@ -207,9 +207,9 @@
           </div>
           <div class="service-content">
             <ul class="service-list">
-              <li><button class="button service-list-button button-active" type="button">Доставка</button></li>
-              <li><button class="button service-list-button" type="button">Гарантия</button></li>
-              <li><button class="button service-list-button" type="button">Кредит</button></li>
+              <li><button class="service-list-button button-active" type="button">Доставка</button></li>
+              <li><button class="service-list-button" type="button">Гарантия</button></li>
+              <li><button class="service-list-button" type="button">Кредит</button></li>
             </ul>
             <section class="service-delivery">
               <h3>Доставка</h3>
@@ -222,7 +222,7 @@
             <section class="service-loan">
               <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-              <a href="#" class="botton">Отправить заявку</a>
+              <a href="#" class="button">Отправить заявку</a>
             </section>
           </div>
         </section>
@@ -239,14 +239,14 @@
               <li>Автотрейдинг</li>
               <li>ЖелДорЭкспедиция</li>
             </ul>
-            <a class="botton" href="about.html">Подробнее о компании</a>
+            <a class="button" href="about.html">Подробнее о компании</a>
           </div>
         </section>
         <section class="contacts">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
           <a class="location-map" href="#"><img src="img/map.png" width="300" height="158" alt="Мы на карте"></a>
-          <a class="botton show-write-us" href="Contacts.html">Заблудились? Напишите нам! </a>
+          <a class="button show-write-us" href="Contacts.html">Заблудились? Напишите нам! </a>
         </section>
       </div>
     </main>
@@ -299,7 +299,7 @@
         <div>
           <img src="img/big_map.png" width="940" height="446" alt="Вы можете нас найти по адресу: г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8">
         </div>
-        <button class="button button-close" type="button" aria-label="Закрыть окно с картой"></button>
+        <button class="button-close" type="button" aria-label="Закрыть окно с картой"></button>
       </section>
       <section class="modal modal-write-us">
         <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
@@ -319,9 +319,9 @@
               <textarea class="user-question" id="user-question" rows="6" placeholder="Ваше сообщение"></textarea>
             </div>
             <div class="modal-submit-wrapper">  
-              <button class="button button-submit" type="submit">Отправить</button>
+              <button class="button-submit" type="submit">Отправить</button>
             </div>
-            <button class="button button-close" type="button" aria-label="Закрыть окно"></button>
+            <button class="button-close" type="button" aria-label="Закрыть окно"></button>
           </fieldset>
         </form>
       </section>
@@ -330,11 +330,11 @@
         <div class="modal-order-nav"> 
           <form class="order-now" action="https://echo.htmlacademy.ru" method="post">
             <fieldset>
-              <button class="button button-continue" type="button">Продолжить покупки</button>
-              <button class="button button-close" type="button" aria-label="Закрыть окно"></button>
+              <button class="button-continue" type="button">Продолжить покупки</button>
+              <button class="button-close" type="button" aria-label="Закрыть окно"></button>
             </fieldset>
           </form>
-          <a href="order.html" class="button order-page">Оформить заказ</a>
+          <a href="order.html" class="order-page">Оформить заказ</a>
         </div>
       </section>
       <script>
