--- a/catalog.html
+++ b/catalog.html
@@ -16,8 +16,8 @@
             <img src="img/logo.svg" width="110" height="17" alt="Логотип интернет-магазина «Техномарт»">
           </a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-              <input type="search" name="search-form" placeholder="Поиск:">
-              <button type="submit" class="search-form-btn"></button>
+            <input class="search-form-field" type="search" name="search-form" placeholder="Поиск:">
+            <button type="submit" class="search-form-btn"></button>
           </form>
           <a href="bookmarks.html" class="header-link header-bookmarks">Закладки: 0</a>
           <a href="cart.html" class="header-link header-cart full-cart">Корзина: 10</a>
