--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <strong>Дрели</strong>
                 <span>Соседям на радость</span>
                 <a href="#" class="drill-tools">Открыть каталог</a>
-                <button class="button gallery-button gallery-button-back" type="button"><img src="img/icon-left.svg" width="22" height="40" alt="Предыдущая категория"></button>
-                <button class="button gallery-button gallery-button-next" type="button"><img src="img/icon-right.svg" width="22" height="40" alt="Следующая категория"></button>
+                <button class="gallery-button gallery-button-back" type="button"><img src="img/icon-left.svg" width="22" height="40" alt="Предыдущая категория"></button>
+                <button class="gallery-button gallery-button-next" type="button"><img src="img/icon-right.svg" width="22" height="40" alt="Следующая категория"></button>
               </li>
               <li class="perforator-group">
                 <strong>Перфораторы</strong>
