--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Каталог интернет-магазина «Техномарт»</title>
     <link rel="stylesheet"  href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-min.css">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
   </head>
@@ -334,7 +334,7 @@
         <a href="order.html" class="order-page">Оформить заказ</a>
       </div>
     </section>
-    <script src="js/modal.js">
+    <script src="js/compressed.js">
     </script>
   </body>
 </html>
